--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^0.3.2",
+    "minisearch": "^3.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
